# ProcessManager

./: .gitignore  CMakeLists.txt  README.md
include/process_manager/: command_parser.h  config.h  process_launcher.h  process_manager.h  signal_handler.h  types.h
src/: command_parser.cpp  config.cpp  main.cpp  process_launcher.cpp  process_manager.cpp  signal_handler.cpp  signal_handler_new.cpp
